--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,11 @@
 PORT=5000
-MONGO_URI=mongodb://127.0.0.1:27017/storage_management
+MONGO_URI=mongodb uri
 NODE_ENV=development
-JWT_SECRET=your_jwt_secret_here
-JWT_EXPIRES_IN=
+JWT_SECRET=your jwt secret here
+JWT_EXPIRES_IN= 7day
+
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=namehost42@gmail.com
+SMTP_PASS=your_app_password
+EMAIL_FROM="Storage App <your_email@gmail.com>"
