--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "joi": "^17.10.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemailer": "^7.0.12"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
